# filespliter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml  security.yml
src/: core.rs  gui_main.rs  joiner.rs  main.rs  splitter.rs
