[package]
name = "filesplitter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "filesplitter"
path = "src/main.rs"

[[bin]]
name = "filesplitter-gui"
path = "src/gui_main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
eframe = "0.28"
egui = "0.28"
rfd = "0.14"
poll-promise = "0.3"
